--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <div>
-    <head>
-      <meta charset="utf-8">
-      <link rel="stylesheet" href="style.css">
-      <title>Julian's profile page</title>
-    </head>
-    <body>
+    <div>
+      <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Julian's super-secret profile page</title>
+      </head>
+      <body>
 
-      <h1>Hi, my name is Julian</h1>
-      <h2>Don't reveal my secret identity!</h2>
+        <h1>Hi, my name is Julian</h1>
+        <h2>(Don't reveal my secret identity!)</h2>
 
-      <img src="images/4701f56e-ba11-49e4-a955-f6b0429840f8.JPG" alt="profile image" height="200" width="200">
+        <img src="images/4701f56e-ba11-49e4-a955-f6b0429840f8.jpeg" alt="profile image" height="300" width="300">
 
-      <p>Most of the time, I'm just a lanky dude who's into art, music and food. But when evil threatens the world, I don a cape and become <strong>THE RED ARROW!!!</strong></p>
-  </div>
+        <p>Most of the time, I'm just a lanky dude who's into art, music and food. But when evil threatens the world, I don a cape and become</p>
+
+        <a href="https://www.amazon.com/Red-Superhero-Cape-Size-Fits/dp/B00LXCYEJW" target="_blank" class="btn-red">THE RED ARROW!!! </a>
+
+    </div>
 
     <div>
       <h3>Some of my favorite recipes</h3>
+      <a href="https://thewoksoflife.com/shanghai-scallion-pancakes/" target="_blank">
+       <img src="images/scallion-pancake_01_03-K-1360x1762.jpg" alt="profile image" height="200" width="200" />
+      </a>
+      <br>
+      Scallion Pancakes
+      <br>
+      (Check out the clickable image!!)
     </div>
 
     <div>
       <h3>Some of my favorite artists</h3>
-    </div>
-
-    <div>
-      <h3>Some of my least favorite super-villains</h3>
-    </div>
-
-    <div>
-      <a href="https://www.lewagon.com" target="_blank">
-      Le Wagon
+      <a href="https://en.wikipedia.org/wiki/Gustave_Dor%C3%A9" target="_blank">
+        <img src="images/gettyimages-165529337-2048x2048.jpg" alt="profile image" height="300" width="300" />
       </a>
-      <!-- <br>
-      <button type="button">Click Me!</button> -->
-
-      <ul>
-        <li>
-          <a href="https://www.facebook.com/">
-            <i class="fab fa-facebook-f"></i> Facebook
-          </a>
-        </li>
-      </ul>
+      <br>
+      Gustave Doré
     </div>
 
+    <div>
+      <h3>Some of my LEAST favorite super-villains</h3>
+      <img src="images/trumpcover_1017.jpg" alt="profile image" height="350" width="300">
+    </div>
+
+    <div>
+      <a href="https://www.facebook.com/">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+    </div>
 
   </body>
 </html>
